# NCEPLIBS-sigio

./: CMakeLists.txt  LICENSE.md  Makefile.in  README  README.md  annotated.html  annotated_dup.js  bafrio.f  build_sigio.sh  classes.html  configure  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files_dup.js  index.html  interfacesigio__module_1_1sigio__srohdc.html  make.sh  make_sigio_lib.sh  makefile_4  namespaces.html  namespaces_dup.js  namespacesigio__r__module.html  namespacesigio__r__module.js  namespacesigio__r__module_structsigio__r__module_1_1sigio__dati_dup.js  namespacesigio__r__module_structsigio__r__module_1_1sigio__datm_dup.js  namespacesigio__r__module_structsigio__r__module_1_1sigio__dats_dup.js  namespacesigio__r__module_structsigio__r__module_1_1sigio__dbti_dup.js  namespacesigio__r__module_structsigio__r__module_1_1sigio__dbtm_dup.js  namespacesigio__r__module_structsigio__r__module_1_1sigio__dbts_dup.js  navtreedata.js  navtreeindex0.js  release_note_v2.0.1.txt  sigio__module_8f.html  sigio__module_8f.js  sigio__module_8f_source.html  sigio__r__module_8f.html  sigio__r__module_8f.js  sigio__r__module_8f_source.html  (+9 more)
.github/workflows/: Intel.yml  Spack.yml  main.yml
Conf/: Sigio_gnu_General.sh  Sigio_intel_Cray.sh  Sigio_intel_Dell.sh  Sigio_intel_Gaea.sh  Sigio_intel_General.sh  Sigio_intel_Hera.sh  Sigio_intel_Theia.sh  Sigio_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
libsrc/: Makefile.in  sigio_module.f  sigio_r_module.f
search/: all_0.js  classes_0.js  files_0.js  namespaces_0.js
spack/: README  package.py
src/: CMakeLists.txt  Makefile  sigio_module.f  sigio_r_module.f
tests/: CMakeLists.txt
utils/: CMakeLists.txt  README.md  physcons.f90  sigdif.f90  ss2gg.f90  ss2lv.f90
